@@ -29,7 +29,9 @@ class Key < ActiveRecord::Base
 
   after_create :add_to_shell
   after_create :notify_user
+  after_create :post_create_hook
   after_destroy :remove_from_shell
+  after_destroy :post_destroy_hook
 
   def strip_white_space
     self.key = key.strip unless key.blank?
@@ -56,12 +58,20 @@ class Key < ActiveRecord::Base
     NotificationService.new.new_key(self)
   end
 
+  def post_create_hook
+    SystemHooksService.new.execute_hooks_for(self, :create)
+  end
+
   def remove_from_shell
     GitlabShellWorker.perform_async(
       :remove_key,
       shell_id,
       key,
     )
+  end
+
+  def post_destroy_hook
+    SystemHooksService.new.execute_hooks_for(self, :destroy)
   end
 
   private
