@@ -4,6 +4,7 @@ describe SystemHooksService do
   let (:user)          { create :user }
   let (:project)       { create :project }
   let (:users_project) { create :users_project }
+  let (:key)           { create(:key, user: user) }
 
   context 'event data' do
     it { event_data(user, :create).should include(:event_name, :name, :created_at, :email, :user_id) }
@@ -12,6 +13,8 @@ describe SystemHooksService do
     it { event_data(project, :destroy).should include(:event_name, :name, :created_at, :path, :project_id, :owner_name, :owner_email, :project_visibility) }
     it { event_data(users_project, :create).should include(:event_name, :created_at, :project_name, :project_path, :project_id, :user_name, :user_email, :project_access, :project_visibility) }
     it { event_data(users_project, :destroy).should include(:event_name, :created_at, :project_name, :project_path, :project_id, :user_name, :user_email, :project_access, :project_visibility) }
+    it { event_data(key, :create).should include(:username, :key, :id) }
+    it { event_data(key, :destroy).should include(:username, :key, :id) }
   end
 
   context 'event names' do
@@ -21,6 +24,8 @@ describe SystemHooksService do
     it { event_name(project, :destroy).should eq "project_destroy" }
     it { event_name(users_project, :create).should eq "user_add_to_team" }
     it { event_name(users_project, :destroy).should eq "user_remove_from_team" }
+    it { event_name(key, :create).should eq 'key_create' }
+    it { event_name(key, :destroy).should eq 'key_destroy' }
   end
 
   def event_data(*args)
