@@ -12,6 +12,7 @@ v 7.3.0
   - Deprecate LDAP account takeover based on partial LDAP email / GitLab username match
   - Keyboard shortcuts for productivity (Robert Schilling)
   - API: filter issues by state (Julien Bianchi)
+  - Add system hook for ssh key changes
 
 v 7.2.0
   - Explore page
